--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
 
     <div class="p-4 border rounded-lg bg-gray-50">
-      <img src="https://via.placeholder.com/100" alt="Kurt Kimura" class="w-24 h-24 mx-auto rounded-full object-cover">
+      <img src="assets/images/kurt.jpg" alt="Kurt Kimura" class="w-24 h-24 mx-auto rounded-full object-cover">
       <h3 class="font-bold mt-3">Kurt Kimura</h3>
       <p class="text-gray-600">Requirements Lead</p>
     </div>
