--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
 
     <div class="p-4 border rounded-lg bg-gray-50">
-      <img src="https://via.placeholder.com/100" alt="Kye Steele" class="w-24 h-24 mx-auto rounded-full object-cover">
+      <img src="assets/images/kye.jpeg" alt="Kye Steele" class="w-24 h-24 mx-auto rounded-full object-cover">
       <h3 class="font-bold mt-3">Kye Steele</h3>
       <p class="text-gray-600">Communications Lead</p>
     </div>
