Added extra pages and navigation

--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
   </style>
 </head>
 <body class="bg-gray-100 text-gray-900">
+<nav class="bg-gray-800 text-white p-4 sticky top-0 w-full shadow-lg z-50">
+  <ul class="flex justify-start space-x-4">
+    <li><a href="index.html" class="hover:underline">Home</a></li>
+    <li><a href="docs.html" class="hover:underline">Documentation</a></li>
+    <li><a href="builds.html" class="hover:underline">Builds</a></li>
+  </ul>
+</nav>
+
 <!-- Header -->
 <header class="text-center p-8 bg-blue-600 text-white">
   <h1 class="text-4xl font-bold">VRHealth 2025</h1>
