--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <li><a href="index.html" class="hover:underline">Home</a></li>
     <li><a href="docs.html" class="hover:underline">Documentation</a></li>
     <li><a href="builds.html" class="hover:underline">Builds</a></li>
+    <li><a href="requirements.html" class="hover:underline">Requirements</a></li>
   </ul>
 </nav>
 
