added additional requirement

--- a/requirements.html
+++ b/requirements.html
@@ -47,6 +47,7 @@
     <dd>- An apartment</dd>
     <dt class="font-bold">5 unique items to locate per environment</dt>
     <dd>- Each environment has its own set of items</dd>
+    <dt class="font-bold">Activity difficulty which scales based on user's performance</dt>
   </dl>
   <br>
   <h3 class="text-2xl mb-4">Object Localization Activity</h3>
